fixed issue with the radial audio frames

--- a/testing/test.html
+++ b/testing/test.html
@@ -432,7 +432,7 @@
 
         <!-- Main Content -->
         <div class="container">
-            <h1>Crux Test Client</h1> 
+            <h1>Crux </h1> 
             
             <div id="generatorSection" class="sketch-box">
                 <h3>Create Custom Scenario</h3>
